--- a/src/App.css
+++ b/src/App.css
@@ -64,10 +64,10 @@
   }
 
   .calc-light{
-    @apply  bg-lightMunsell h-[90vh] w-[90vw] md:w-[30vw] border-2 rounded-2xl p-5 flex flex-col gap-5 justify-between items-center
+    @apply  bg-lightMunsell h-[fit-content] w-[90vw] md:w-[30vw] border-2 rounded-2xl p-5 flex flex-col gap-5 justify-between items-center
   }
   .calc-dark{
-    @apply bg-darkGray h-[90vh] w-[90vw] md:w-[30vw] border-2 rounded-2xl p-5 flex flex-col gap-5 justify-between items-center
+    @apply bg-darkGray h-[fit-content] w-[90vw] md:w-[30vw] border-2 rounded-2xl p-5 flex flex-col gap-5 justify-between items-center
   }
 
   .display-light{
